--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "compass": "^0.1.1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.0.1",
@@ -62,6 +63,7 @@
     "@storybook/addon-actions": "^3.3.11",
     "@storybook/addon-links": "^3.3.11",
     "@storybook/react": "^3.3.11",
+    "action-logger": "0.0.1",
     "eslint-plugin-react-redux": "^1.3.2",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6"
